# chinko_bot

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  parser.tab.c  parser.tab.h
Var/: IVar.cpp  IVar.h  Var.h  Var_constructors.h  Var_getValue.h  Var_operators.h  Var_templateToString.h  a.out  main.cpp
chinko_bot/commands/commandReturnValues/: BotCommandReturnValues.h  CommandSuccessReturnValue.h  NoReturnValue.h  WeightReturnValues.h  WrongCommand.h
chinko_bot/commands/commands/: BotCommand.h  ChangeToDownMapBotCommand.h  ChangeToLeftMapBotCommand.h  ChangeToRightMapBotCommand.h  ChangeToUpMapBotCommand.h  CollectInteractivesBotCommand.h  LogBotCommand.h  RequestWeightBotCommand.h
chinko_bot/connections/: DofusClientConnection.cpp  DofusClientConnection.h
chinko_bot/connections/API/: APIClientConnection.h  APIConnection.cpp  APIConnection.h  APIListeningServer.cpp  APIListeningServer.h  APIServerConnection.h
chinko_bot/connections/DofusBot/: DofusClientConnection.cpp
chinko_bot/dscript/: Makefile  another.txt  base  dscript.txt  gramm_funcs.cpp  gramm_funcs.h  lexer.l  main.cpp  parser.h  parser.y  script.txt  std.cpp  std.h
chinko_bot/dscript/includes/: asm_codes.h  gramm_funcs.h
chinko_bot/dscript/products/: lexer.c  lexer.cpp  lexer.h  parser.c  parser.h  parser.tab.cpp  parser.tab.h
chinko_bot/dscript/src/: gramm_funcs.cpp  lexer.l  main.cpp  parser.y
chinko_bot/helpers/as3/: As3_Math.cpp  As3_Math.h
chinko_bot/helpers/builders/: ZoneBuilder.cpp  ZoneBuilder.h
chinko_bot/informationContainers/gameServer/: GameServerData.h  GameServerInformationContainer.h  GameServerInformationsContainer.h
chinko_bot/managers/: AuthentificationManager.cpp  AuthentificationManager.h
chinko_bot/managers/character/: PlayedCharacterManager.cpp  PlayedCharacterManager.h
chinko_bot/managers/connection/: AuthentificationManager.cpp  AuthentificationManager.h
chinko_bot/managers/map/: AbstractMapManager.cpp  AbstractMapManager.h  CurrentMapManager.cpp  CurrentMapManager.h  FightMapManager.cpp  FightMapManager.h  RoleplayMapManager.cpp  RoleplayMapManager.h
chinko_bot/managers/movement/: MovementManager.cpp  MovementManager.h
chinko_bot/managers/script/: ScriptConfig.h  ScriptManager.cpp  ScriptManager.h  ScriptThread.cpp  ScriptThread.h
chinko_bot/messages/: DofusMessageTypeHandler.cpp  DofusMessageTypeHandler.h  DofusMessageTypesIncludes.h  UnknownDofusMessage.cpp  UnknownDofusMessage.h
chinko_bot/messages/connection/: CredentialsAcknowledgementMessage.h  HelloConnectMessage.cpp  HelloConnectMessage.h  IdentificationFailedForBadVersionMessage.cpp  IdentificationFailedForBadVersionMessage.h  IdentificationFailedMessage.cpp  IdentificationFailedMessage.h  IdentificationMessage.cpp  IdentificationMessage.h  IdentificationSuccessMessage.cpp  IdentificationSuccessMessage.h  SelectedServerDataExtendedMessage.cpp  SelectedServerDataExtendedMessage.h  SelectedServerDataMessage.cpp  SelectedServerDataMessage.h  SelectedServerRefusedMessage.cpp  SelectedServerRefusedMessage.h  ServerSelectionMessage.cpp  ServerSelectionMessage.h  ServersListMessage.cpp  ServersListMessage.h
chinko_bot/messages/handshake/: ProtocolRequired.cpp  ProtocolRequired.h
chinko_bot/messages/queues/: LoginQueueStatusMessage.cpp  LoginQueueStatusMessage.h  QueueStatusMessage.cpp  QueueStatusMessage.h
chinko_bot/messages/security/: CheckIntegrityMessage.cpp  CheckIntegrityMessage.h  ClientKeyMessage.cpp  ClientKeyMessage.h  RawDataMessage.h
chinko_bot/types/: NetworkType.h  NetworkTypeHandler.cpp  NetworkTypeHandler.h  NetworkTypesIncludes.h
chinko_bot/types/connection/: GameServerInformations.cpp  GameServerInformations.h
chinko_bot/types/version/: Version.cpp  Version.h
chinko_bot/units/APIUnit/: APIUnit.cpp  APIUnit.h
chinko_bot/units/dofusBotUnit/: DofusBotUnit.cpp  DofusBotUnit.h
cmake/: CMakeCache.txt  Makefile  chinko_bot  cmake_install.cmake
cmake/std_bot/: Makefile  cmake_install.cmake
database/maps/json/: 153878787.json  153880323.json  153880835.json  188743682.json  (+10 more)
helpers/: MessageGenerator.config  MessageGenerator.py  NetworkTypeGenerator.config  NetworkTypeGenerator.py
helpers/protocol_builder/: build_children.py  protocol_builder.py  protocol_patcher.py  protocols.json  protocols_old.json  protocols_old2.json  protocols_old3.json  standard_protocol_builder.sh  test.h
helpers/skills_preproc/: Skills.json  skill_prerocess.py
scripts/: script.txt  script_5_7.txt
std_bot/: CMakeLists.txt  Makefile  cmake_install.cmake
std_bot/connection/: ClientConnection.cpp  ClientConnection.h  Connection.h  ListeningServer.cpp  ListeningServer.h  NetworkConnection.cpp  NetworkConnection.h  PrefixNetworkConnection.cpp  PrefixNetworkConnection.h  ServerConnection.cpp  ServerConnection.h
std_bot/dataContainers/: DataBuffer.h  MessageDataBuffer.cpp  MessageDataBuffer.h
std_bot/frames/: Frame.h  UpdatingFrame.h
std_bot/frames/basicFrames/: PingFrame.cpp  PingFrame.h  TimeFrame.cpp  TimeFrame.h
std_bot/frames/connectionFrames/: BasicConnectionUnitFrame.cpp  BasicConnectionUnitFrame.h
std_bot/logger/: Logger.cpp  Logger.h
std_bot/messaging/: ConnectionMessage.h  Message.h  MessageInterface.cpp  MessageInterface.h  MessageTypeHandler.h  NetworkMessage.h  PrefixedMessage.h
std_bot/messaging/basicMessages/: PingMessage.h  PongMessage.h  RawDataMessage.cpp  RawDataMessage.h  TimedMessage.h
std_bot/messaging/connectionMessages/: AddConnectionMessage.h  ConnectionFailureMessage.h  ConnectionIdGetMessage.h  ConnectionIdMessage.h  ConnectionRequestMessage.h  ConnectionSuccessMessage.h  DisconnectRequestMessage.h  DisconnectedMessage.h  GetConnectionFocusFailureMessage.h  GetConnectionFocusRequestMessage.h  GetConnectionFocusSuccessMessage.h  SendPacketFailureMessage.h  SendPacketRequestMessage.h  SendPacketSuccessMessage.h
std_bot/std_include/: ptr_include.h  socket_include.cpp  socket_include.h  std_include.h  thread_include.h  time_include.h
std_bot/units/: ConnectionUnit.cpp  ConnectionUnit.h  MessagingUnit.cpp  MessagingUnit.h  WorkingUnit.cpp  WorkingUnit.h
(+744 files in other folders)
